Guard a keyspace and all it holds with one lock
Every Volatile* class owned a ReentrantReadWriteLock, only two used
theirs, and none locked upward. A row's by-name set took the row lock
and then the table's, inverting the order every read used, which three
threads could park on forever.

Collapse the levels instead of ordering them: a keyspace owns the only
lock inside it, and its tables, columns, rows and user defined types
hand that one back. A row is only ever touched alongside the column list
its values are positionally tied to, so one lock over both is what keeps
them consistent - and with no second lock there is no pair to take in
the wrong order. Handlers take context.read then keyspace.write through
SeaStarTable#mutate rather than reaching for a lock each.

Every field is now annotated @GuardedBy or documented as immutable. The
map getters hand out copies rather than live views; getSeaStarKeyspaces
wrapped a plain HashMap, so a caller walking it during CREATE KEYSPACE
met a ConcurrentModificationException.

A row resolving its partition's static cells still mutates two fields on
the read path. They collapse to one volatile reference: the resolution
is a computeIfAbsent on a concurrent map, so two readers racing get the
same cells back and publishing it is all that is needed.